CSS: Fix the desktop options menu right alignement

--- a/TheBrownieClicker/src/style/brownie.css
+++ b/TheBrownieClicker/src/style/brownie.css
@@ -488,7 +488,7 @@ ul#optionsList{
 
     #desktopOptions{
         position: absolute;
-        right: 32vw;
+        right: 2vw;
         bottom: 0;
     }
 
